recursion.cons.lessons.recursion.cons.AllDifferent.scala.error
allDifferent:11: error: value * is not a member of Boolean
	return fonctionInterne(l.tail,l.head)*allDifferent(l.tail);
                                             ^